Bug 882552 - Change Binder Thread's default priority to 0. r=mwu, r=jlebar